--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -51,5 +51,7 @@
     <string name="cancel_button_label">CANCEL</string>
     <string name="content_descr_button_divider">Button Divider</string>
     <string name="content_desc_message_icon">Message icon</string>
+    <string name="content_decs_user_avatar">User avatar</string>
+    <string name="content_decs_user_checkmark">User checkmark</string>
 
 </resources>
